--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,5 +12,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-      name: Test Rust
+    - name: Test Rust
       run: cargo test --verbose
